adding sorting functionality

--- a/templates/map.html
+++ b/templates/map.html
@@ -46,6 +46,13 @@
 
 		<!-- LIST -->
 		<nav id="list">
+			<div id="list-hdr">
+				<select class="list-sort" id="list-sort">
+					<option value="alphabetical">Alphabetical</option>
+					<option value="distance">Distance</option>
+					<option value="rarity">Rarity</option>
+				</select>
+				<a href="#list_options"></a></div>
 			<div id="list-content"></div>
 		</nav>
 		<!-- NAV -->
