--- a/templates/map.html
+++ b/templates/map.html
@@ -52,7 +52,8 @@
 					<option value="distance">Distance</option>
 					<option value="rarity">Rarity</option>
 				</select>
-				<a href="#list_options"></a></div>
+				<a href="#list-options" id="list-options"></a>
+			</div>
 			<div id="list-content"></div>
 		</nav>
 		<!-- NAV -->
