--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2041,3 +2041,22 @@ html, body {
     #list .hide_pokemon > a {
       color: #b20a31;
       text-decoration: none; }
+  #list #list-hdr {
+    display: flex; }
+    #list #list-hdr #list-sort {
+      flex: 1;
+      width: 90%;
+      left: 0; }
+    #list #list-hdr > a[href="#list-options"] {
+      text-decoration: none;
+      -webkit-tap-highlight-color: transparent;
+      padding-right: 5px;
+      padding-left: 5px; }
+      #list #list-hdr > a[href="#list-options"]:before {
+        content: "";
+        -moz-osx-font-smoothing: grayscale;
+        -webkit-font-smoothing: antialiased;
+        font-family: FontAwesome;
+        font-style: normal;
+        font-weight: normal;
+        text-transform: none !important; }
