--- a/static/sass/layout/_list.scss
+++ b/static/sass/layout/_list.scss
@@ -60,7 +60,7 @@
       left: 0;
     }
     > a {
-      &[href="#list-options"] {
+      &[href="#list-options-mod"] {
         @include icon('\f013');
         -webkit-tap-highlight-color: rgba(0,0,0,0);
         padding-right: 5px;
