--- a/templates/map.html
+++ b/templates/map.html
@@ -176,8 +176,8 @@
 		<div id="map"></div>
 		<div id="list-options-mod" class="modal" style="display: none;">
 			<h3>IT WORKED!</h3>
-			<div id="list-options-mod-items"></div>
-			<div id="list-options-mod-grp1"></div>
+			<div id="list-options-mod-items" class="list-item-pokes"></div>
+			<div id="list-options-mod-grp1" class="list-item-groups"></div>
 		</div>
 	</div>
 
