--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2013,7 +2013,8 @@ html, body {
   left: 0;
   visibility: hidden;
   width: 18em;
-  z-index: 500; }
+  z-index: 500;
+  padding-bottom: 4rem; }
   #list.visible {
     -moz-transform: translateX(0);
     -webkit-transform: translateX(0);
@@ -2028,7 +2029,8 @@ html, body {
     box-shadow: 0 2px 3px rgba(0, 0, 0, 0.1), 0 0 0 1px rgba(0, 0, 0, 0.1);
     padding: 5px 15px 5px 5px;
     margin-bottom: 5px;
-    color: #3b3b3b; }
+    color: #3b3b3b;
+    cursor: pointer; }
   #list .pokemon_id {
     float: right; }
   #list .pokemon_name {
