--- a/static/sass/layout/_list.scss
+++ b/static/sass/layout/_list.scss
@@ -15,6 +15,7 @@
   visibility: hidden;
   width: 18em;
   z-index: 500;
+  padding-bottom: 4rem;
   &.visible {
     @include vendor('transform', 'translateX(0)');
     box-shadow: 0 0 1.5em 0 rgba(0,0,0,0.2);
@@ -30,6 +31,7 @@
    padding: 5px 15px 5px 5px;
    margin-bottom: 5px;
    color: rgb(59, 59, 59);
+   cursor: pointer;
   }
 
   .pokemon_id {
